New Crowdin updates (#12289)
* New translations: site.xml (Italian)

* New translations: site.xml (Polish)

* New translations: site.xml (Estonian)

* New translations: site.xml (Catalan)

* New translations: tfa.xml (Catalan)

* New translations: site.xml (Dutch)

* New translations: site.xml (Afrikaans)

* New translations: site.xml (Finnish)

* New translations: site.xml (Norwegian Nynorsk)

* New translations: site.xml (Estonian)

* New translations: tfa.xml (Estonian)

* New translations: site.xml (Slovenian)

* New translations: class.xml (Estonian)

* New translations: emails.xml (Estonian)

* New translations: site.xml (Swedish)

* New translations: site.xml (Turkish)

* New translations: site.xml (Bosnian)

* New translations: tfa.xml (French)

* New translations: site.xml (Dutch)

* New translations: site.xml (French)

* New translations: site.xml (Spanish)

* New translations: site.xml (Danish)

* New translations: site.xml (Finnish)

* New translations: site.xml (Armenian)

* New translations: site.xml (Russian)

* New translations: site.xml (Slovenian)

* New translations: emails.xml (Breton)

* New translations: site.xml (German)

* New translations: site.xml (Hebrew)

* New translations: site.xml (Polish)

* New translations: tfa.xml (Luxembourgish)

* New translations: site.xml (Luxembourgish)

* New translations: settings.xml (Hungarian)

* New translations: preferences.xml (Luxembourgish)

* New translations: preferences.xml (Luxembourgish)

* New translations: site.xml (French)

* New translations: site.xml (Italian)

* New translations: site.xml (Galician)

* New translations: site.xml (Faroese)

* New translations: site.xml (Portuguese)

* New translations: site.xml (Swiss German)

* New translations: site.xml (Japanese)

* New translations: tfa.xml (Burmese)

* New translations: site.xml (Burmese)

* New translations: site.xml (Hindi)

* New translations: 

--- a/translation/dest/class/et-EE.xml
+++ b/translation/dest/class/et-EE.xml
@@ -59,8 +59,8 @@ Siin on link klassi sisenemiseks.</string>
   </plurals>
   <string name="onlyVisibleToTeachers">Nähtav ainult klassi õpetajate poolt</string>
   <string name="lastActiveDate">Aktiivne</string>
-  <string name="managed">Õnnestus</string>
-  <string name="thisStudentAccountIsManaged">See õpilane on loodud</string>
+  <string name="managed">Hallatud</string>
+  <string name="thisStudentAccountIsManaged">See õpilaskonto on hallatud</string>
   <string name="upgradeFromManaged">Uuenda iseseisvaks</string>
   <string name="release">Vabasta</string>
   <string name="releaseTheAccount">Vabasta kasutaja, et õpilane saaks seda muuta ise.</string>
