--- a/translation/dest/emails/et-EE.xml
+++ b/translation/dest/emails/et-EE.xml
@@ -4,7 +4,7 @@
   <string name="emailConfirm_click" comment="emailConfirm_click&#10;&#10;Part of the confirmation email upon registering for a Lichess account.&#10;&#10;The unique reset link is presented just after this string.">Vajutage sellele aadressile, et aktiveerida oma Lichess-i kasutaja:</string>
   <string name="emailConfirm_ignore">Kui te ei registreerinud ennast Lichess-i kasutajaks, siis võite seda meili ignoreerida.</string>
   <string name="passwordReset_subject">Taastage oma lichess.org parool, %s</string>
-  <string name="passwordReset_intro">Saime taotluse sinu parooli taastamiseks.</string>
+  <string name="passwordReset_intro">Saime taotluse teie parooli taastamiseks.</string>
   <string name="passwordReset_clickOrIgnore">Kui teie tegite selle päringu, siis vajutage all olevat linki. Kui teie seda päringut ei teinud, siis ignoreeriga seda meili.</string>
   <string name="emailChange_subject">Kinnitage enda uus e-posti aadress, %s</string>
   <string name="emailChange_intro">Te olete teinud päringu oma e-posti aadressi muutmiseks.</string>
