--- a/translation/dest/site/ca-ES.xml
+++ b/translation/dest/site/ca-ES.xml
@@ -207,6 +207,10 @@
   <string name="email">Correu electrònic</string>
   <string name="passwordReset">Restablir la contrasenya</string>
   <string name="forgotPassword">Has oblidat la contrasenya?</string>
+  <string name="error.weakPassword">La contrasenya és massa comuna i massa fàcil d\'endevinar.</string>
+  <string name="error.namePassword">Si us plau, no feu servir el vostre nom d\'usuari com a contrasenya.</string>
+  <string name="passwordSuggestion">No feu servir una contrasenya suggerida per algú altre. La farà servir per robar el vostre compte.</string>
+  <string name="emailSuggestion">No feu server un correu electrònic suggerit per algú altre. La farà servir per robar el vostre compte.</string>
   <string name="emailConfirmHelp">Ajuda amb l\'email de confirmació</string>
   <string name="emailConfirmNotReceived">No heu rebut el vostre email de confirmació després de registrar-vos?</string>
   <string name="whatSignupUsername">Quin nom d\'usuari heu utilitzat per registrar-vos?</string>
