--- a/translation/dest/site/ru-RU.xml
+++ b/translation/dest/site/ru-RU.xml
@@ -231,6 +231,8 @@
   <string name="forgotPassword">Забыли пароль?</string>
   <string name="error.weakPassword">Этот пароль очень распространён, и его слишком легко угадать.</string>
   <string name="error.namePassword">Пожалуйста, не используйте свой логин в качестве пароля.</string>
+  <string name="youAreLeavingLichess">Вы покидаете Lichess</string>
+  <string name="neverTypeYourPassword">Никогда не вводите свой пароль Lichess на другом сайте!</string>
   <string name="passwordSuggestion">Не устанавливайте пароль, предложенный другими людьми. Они с его помощью украдут вашу учётную запись.</string>
   <string name="emailSuggestion">Не устанавливайте адрес электронной почты, предложенный другими людьми. Они с его помощью украдут вашу учётную запись.</string>
   <string name="emailConfirmHelp">Помощь с подтверждением электронной почты</string>
