--- a/translation/dest/tfa/ca-ES.xml
+++ b/translation/dest/tfa/ca-ES.xml
@@ -14,4 +14,6 @@
   <string name="twoFactorDisable">Necessites la teva contrasenya i un codi d\'autenticació de la teva aplicació d\'autenticació per desactivar l\'autenticació en dos passos.
 Si has perdut l\'accés als teus codis d\'autenticació, també pots restablir la teva contrasenya per correu electrònic.</string>
   <string name="openTwoFactorApp">Obre al teu dispositiu l\'aplicació d\'autenticació de dos factors per veure el teu codi d\'autenticació verificar la teva identitat.</string>
+  <string name="setupReminder">Si us plau, activeu l\'autentificació en dues passes per augmentar la seguretat del vostre compte a https://lichess.org/account/twofactor.
+Heu rebut aquest missatge perquè el vostre compte té responsabilitats especials com líder d\'un equip, entrenador, professor o streamer</string>
 </resources>
