--- a/translation/dest/emails/br-FR.xml
+++ b/translation/dest/emails/br-FR.xml
@@ -9,7 +9,7 @@
   <string name="emailChange_subject">Kadarnaat ar chomlec\'h postel nevez, %s</string>
   <string name="emailChange_intro">Goulennet ho peus cheñch ho chomlec\'h postel.</string>
   <string name="emailChange_click">Evit kadarnaat eo deoc\'h ar chomlec\'h postel-mañ, klikit war al liamm-mañ mar plij ganeoc\'h:</string>
-  <string name="welcome_subject">Donedigezh vat e lichess.org, %s</string>
+  <string name="welcome_subject">Donemat war lichess.org, %s</string>
   <string name="welcome_text">Deuet oc\'h a-benn da grouiñ ur gont war https://lichess.org.
 
 Amañ emañ ho pajenn profil: %1$s. Gallout a rit he fersonelaat war %2$s.
