--- a/translation/dest/preferences/lb-LU.xml
+++ b/translation/dest/preferences/lb-LU.xml
@@ -3,6 +3,7 @@
   <string name="preferences">Astellungen</string>
   <string name="display">Usiicht</string>
   <string name="privacy">Privatsphär</string>
+  <string name="notifications" comment="notifications&#10;&#10;Heading for notification settings">Benoriichtegungen</string>
   <string name="pieceAnimation">Figurenanimatioun</string>
   <string name="materialDifference">Materialënnerscheed</string>
   <string name="boardHighlights">Briet Highlights (leschten Zuch an Schach)</string>
@@ -47,4 +48,17 @@
   <string name="sayGgWpAfterLosingOrDrawing" comment="sayGgWpAfterLosingOrDrawing&#10;&#10;When enabled, this setting will automatically send 'Good game, well played' to your opponent if you are lose or draw the game. It's meant as a courtesy message.&#10;&#10;The message will be sent in ENGLISH.&#10;&#10;It is up to you how to deal with this. For example, you may want to put '(message will be sent in English)' in your translated text as one example. Or you can leave the actual English text and put a brief translation in your own language.">No Defaite oder Remis \"Good game, well played\" (Gudd Partie, gudd gespillt) soen</string>
   <string name="yourPreferencesHaveBeenSaved">Deng Astellungen goufen gespäichert.</string>
   <string name="scrollOnTheBoardToReplayMoves">Scroll iwwer d\'Briet fir Zich nozespillen</string>
+  <string name="correspondenceEmailNotification">Deegleg Email mat Lëscht vun Korrespondenzpartien</string>
+  <string name="notifyStreamStart" comment="notifyStreamStart&#10;&#10;A notification setting - notifies players when a streamer they follow on Lichess has started streaming">Streamer geet live</string>
+  <string name="notifyInboxMsg" comment="notifyInboxMsg&#10;&#10;A notification setting - notifies players when they receive a new message in their Lichess inbox">Nei Privatnoriicht</string>
+  <string name="notifyForumMention" comment="notifyForumMention&#10;&#10; A notification setting - notifies players when someone has @mentioned their name in the Lichess Forum (https://lichess.org/forum)">Forenkommentar ernimmt dech</string>
+  <string name="notifyInvitedStudy" comment="notifyInvitedStudy&#10;&#10; A notification setting - notifies players about invites to studies (https://lichess.org/study/)">Etüdeninvitatioun</string>
+  <string name="notifyGameEvent" comment="notifyGameEvent&#10;&#10;A notification setting - notifies players about updates in correspondence games">Korrespondenzpartien Updates</string>
+  <string name="notifyChallenge" comment="notifyChallenge&#10;&#10;A notification setting - notifies players about incoming challenges.">Erausfuerderungen</string>
+  <string name="notifyTournamentSoon" comment="notifyTournamentSoon&#10;&#10;A notification setting - notifies players if a tournament is starting soon.">Turnéier fänkt gleich un</string>
+  <string name="notifyTimeAlarm" comment="notifyTimeAlarm&#10;&#10;A notification setting when there are only a few hours left before your time runs out.">Zäit an Korrespondenzpartie leeft of</string>
+  <string name="notifyBell" comment="notifyBell&#10;&#10;A notification setting - toggles a bell sound being played when a notification appears.">Benoriichtegung ob Lichess</string>
+  <string name="notifyPush" comment="notifyPush&#10;&#10;Also known as a 'push notification', this is a setting for device notifications.">Gerät Benoriichtegung wanns du net ob Lichess bass</string>
+  <string name="notifyWeb" comment="notifyWeb&#10;Lets players set native web browser notifications on and off">Web-Browser</string>
+  <string name="notifyDevice" comment="notifyDevice&#10; Lets players toggle device notifications on and off when they are not on Lichess">Gerät</string>
 </resources>
