--- a/translation/dest/site/af-ZA.xml
+++ b/translation/dest/site/af-ZA.xml
@@ -207,6 +207,12 @@
   <string name="email">E-pos</string>
   <string name="passwordReset">Wagwoord herstel</string>
   <string name="forgotPassword">Wagwoord vergeet?</string>
+  <string name="error.weakPassword">Hierdie wagwoord is besonder algemeen en maklik om te raai.</string>
+  <string name="error.namePassword">Moenie jou gebruikernaam as wagwoord gebruik nie.</string>
+  <string name="youAreLeavingLichess">Jy verlaat Lichess</string>
+  <string name="neverTypeYourPassword">Moenie jou Lichess wagwoord ooit op \'n ander werf intik nie!</string>
+  <string name="passwordSuggestion">Moenie \'n wagwoord gebruik wat deur iemand anders voorgestel is nie. Dit kan gebruik word om jou rekening te steel.</string>
+  <string name="emailSuggestion">Moenie \'n epos-adres gebruik wat deur iemand anders voorgestel is nie. Dit kan gebruik word om jou rekening te steel.</string>
   <string name="emailConfirmHelp">Hulp met e-posbevestiging</string>
   <string name="emailConfirmNotReceived">Geen bevestigingsboodskap ontvang nadat jy ingeteken het nie?</string>
   <string name="whatSignupUsername">Watter gebruikersnaam het jy gebruik om mee in te teken?</string>
