--- a/translation/dest/site/et-EE.xml
+++ b/translation/dest/site/et-EE.xml
@@ -38,7 +38,7 @@
   <string name="blackPlays">Must mängib</string>
   <plurals name="opponentLeftCounter">
     <item quantity="one">Vastane lahkus mängust. Saate panna vastase alistuma %s sekundi pärast.</item>
-    <item quantity="other">Vastane lahkus mängust. Saad panna vastase alistuma %s sekundi pärast.</item>
+    <item quantity="other">Vastane lahkus mängust. Saad kuulutada ennast võitjaks %s sekundi pärast.</item>
   </plurals>
   <string name="opponentLeftChoices">Vastane on lahkunud mängust. Võid sundida mängijat alistuma või ootadata.</string>
   <string name="forceResignation">Sunni alistuma</string>
@@ -91,7 +91,7 @@
     <item quantity="one">Šahh ja Matt %s käiguga</item>
     <item quantity="other">Šahh ja matt %s käiguga</item>
   </plurals>
-  <string name="dtzWithRounding">DTZ50\'\' ümardatult, põhineb poolkäikude arvul kuni järgmise löögi või etturi liigutuseni</string>
+  <string name="dtzWithRounding">DTZ50\'\' ümardatult, põhineb poolkäikude arvul kuni järgmise löögi või etturi käiguni</string>
   <string name="noGameFound">Ühtegi mängu ei leitud</string>
   <string name="maybeIncludeMoreGamesFromThePreferencesMenu">Kas kaasata eelistuste menüüst rohkem mänge?</string>
   <string name="openings">Avangud</string>
@@ -200,13 +200,17 @@
   <string name="changeUsernameNotSame">Muuta saab ainult tähe suurust. Näiteks \"karlsuur\" ja \"KarlSuur\".</string>
   <string name="changeUsernameDescription">Muuda kasutajanime. Seda saad teha ainult korra ning muuta on võimalik ainult kasutajanimes leiduvate tähtede suurust.</string>
   <string name="signupUsernameHint">Vali kasutajanimi mis oleks kõigile sobilik, isegi lastele. Seda ei saa hiljem muuta, ning kõik sobimatute nimedega kontod suletakse!</string>
-  <string name="signupEmailHint">Seda kasutatakse ainult salasõna lähtestamiseks.</string>
-  <string name="password">Salasõna</string>
-  <string name="changePassword">Muuda salasõna</string>
+  <string name="signupEmailHint">Seda kasutatakse ainult parooli lähtestamiseks.</string>
+  <string name="password">Parool</string>
+  <string name="changePassword">Muuda parooli</string>
   <string name="changeEmail">Muuda email</string>
   <string name="email">Email</string>
-  <string name="passwordReset">Salasõna lähtestamine</string>
-  <string name="forgotPassword">Unustasid salasõna?</string>
+  <string name="passwordReset">Parooli lähtestamine</string>
+  <string name="forgotPassword">Unustasid parooli?</string>
+  <string name="error.weakPassword">See parool on väga levinud ning liiga lihtne arvata.</string>
+  <string name="error.namePassword">Palun ära kasuta oma kasutajanime paroolina.</string>
+  <string name="passwordSuggestion">Ära kasuta kellegi teise poolt soovitatud parooli. Nad võivad su konto kaaperdada.</string>
+  <string name="emailSuggestion">Ära kasuta kellegi teise poolt soovitatud e-maili aadressi. Nad võivad su konto kaaperdada.</string>
   <string name="emailConfirmHelp">Abi emaili kinnitamisega</string>
   <string name="emailConfirmNotReceived">Ei saanud pärast registreerumist kinnitust?</string>
   <string name="whatSignupUsername">Mis kasutajanime registreerimisel kasutasid?</string>
@@ -550,7 +554,7 @@ arvutianalüüsi, mängu jututoa ning jagatava URL-i.</string>
   <string name="newPassword">Uus parool</string>
   <string name="newPasswordAgain">Uus parool (uuesti)</string>
   <string name="newPasswordsDontMatch">Uued paroolid ei ühti</string>
-  <string name="newPasswordStrength">Salasõna tugevus</string>
+  <string name="newPasswordStrength">Parooli tugevus</string>
   <string name="clockInitialTime">Põhiaeg</string>
   <string name="clockIncrement">Kella juurdekasv</string>
   <string name="privacy">Privaatsus</string>
@@ -577,7 +581,7 @@ arvutianalüüsi, mängu jututoa ning jagatava URL-i.</string>
   <string name="timeline">Ajatelg</string>
   <string name="starting">Algab:</string>
   <string name="allInformationIsPublicAndOptional">Kõik andmed on avalikud ja vabatahtlikud.</string>
-  <string name="biographyDescription">Räägi endast, oma huvidest, mis meeldib male juures, lemmikavangud, mängijad, ...</string>
+  <string name="biographyDescription">Räägi endast, oma huvidest, mis meeldib male juures, lemmikavangud, -mängijad, ...</string>
   <plurals name="maximumNbCharacters">
     <item quantity="one">Maksimum: %s märk.</item>
     <item quantity="other">Maksimum: %s märki.</item>
@@ -606,7 +610,7 @@ arvutianalüüsi, mängu jututoa ning jagatava URL-i.</string>
   <string name="error.email_different">See on juba su e-posti aadress</string>
   <string name="error.minLength">Peab olema vähemalt %s märki</string>
   <string name="error.maxLength">Peab olema alla %s märgi</string>
-  <string name="error.min">Arv peab olema vähemalt %s</string>
+  <string name="error.min">Peab olema vähemalt %s</string>
   <string name="error.max">Ei tohi olla üle %s</string>
   <string name="ifRatingIsPlusMinusX">Kui reiting on ± %s</string>
   <string name="ifRegistered">Registreeritud kasutajad</string>
@@ -627,7 +631,7 @@ arvutianalüüsi, mängu jututoa ning jagatava URL-i.</string>
   <string name="videoLibrary">Videod</string>
   <string name="streamersMenu">Striimijad</string>
   <string name="mobileApp">Mobiilirakendus</string>
-  <string name="webmasters">Veebmeistritele</string>
+  <string name="webmasters">Veebimeistritele</string>
   <string name="about">Info</string>
   <string name="aboutX">Info %s kohta</string>
   <string name="xIsAFreeYLibreOpenSourceChessServer">%1$s on täiesti tasuta (%2$s), reklaamivaba, avatud lähtekoodiga male server.</string>
@@ -789,15 +793,15 @@ arvutianalüüsi, mängu jututoa ning jagatava URL-i.</string>
   <string name="findBetterMoveForBlack">Leia parem käik mustale</string>
   <string name="resumeLearning">Jätka õppimist</string>
   <string name="youCanDoBetter">Suudad paremini</string>
-  <string name="tryAnotherMoveForWhite">Proovi mingisugust teist käiku valgele</string>
-  <string name="tryAnotherMoveForBlack">Proovi mingisugust teist käiku mustale</string>
+  <string name="tryAnotherMoveForWhite">Proovi teist käiku valgele</string>
+  <string name="tryAnotherMoveForBlack">Proovi teist käiku mustale</string>
   <string name="solution">Lahendus</string>
   <string name="waitingForAnalysis">Analüüsimine</string>
   <string name="noMistakesFoundForWhite">Valge eksimusi ei leitud</string>
   <string name="noMistakesFoundForBlack">Musta eksimusi ei leitud</string>
   <string name="doneReviewingWhiteMistakes">Valge vead on üle vaadatud</string>
   <string name="doneReviewingBlackMistakes">Musta vead on üle vaadatud</string>
-  <string name="doItAgain">Tee uuesti</string>
+  <string name="doItAgain">Vaata veelkord üle</string>
   <string name="reviewWhiteMistakes">Vaata üle valge vead</string>
   <string name="reviewBlackMistakes">Vaata üle musta vead</string>
   <string name="advantage">Eelis</string>
@@ -812,7 +816,7 @@ arvutianalüüsi, mängu jututoa ning jagatava URL-i.</string>
   <string name="addCurrentVariation">Lisa praegune variatsioon</string>
   <string name="playVariationToCreateConditionalPremoves">Tingimuslike eelkäikude loomiseks mängi variatsioon</string>
   <string name="noConditionalPremoves">Tingimuslikud eelkäigud puuduvad</string>
-  <string name="playX">Mängi %s</string>
+  <string name="playX">Käi %s</string>
   <plurals name="andSaveNbPremoveLines">
     <item quantity="one">ja salvesta %s ettekäigu variendid</item>
     <item quantity="other">ja salvesta %s ettekäigu variendid</item>
@@ -821,7 +825,7 @@ arvutianalüüsi, mängu jututoa ning jagatava URL-i.</string>
   <string name="weHadToTimeYouOutForAWhile">Me pidime su natukeseks ära blokeerima.</string>
   <string name="timeoutExpires">Blokeering aegub %s.</string>
   <string name="why">Miks?</string>
-  <string name="pleasantChessExperience">Me tahame pakkuda häid male kogemusi kõigile oma mängijatele.</string>
+  <string name="pleasantChessExperience">Me tahame pakkuda häid malekogemusi kõigile.</string>
   <string name="goodPractice">Selleks peame olema kindlad, et kõik meie kasutajad järgivad reegleid.</string>
   <string name="potentialProblem">Kui potentsiaalne probleem on avastatud siis me näitame seda sõnumit.</string>
   <string name="howToAvoidThis">Kuidas seda vältida?</string>
@@ -829,7 +833,7 @@ arvutianalüüsi, mängu jututoa ning jagatava URL-i.</string>
   <string name="tryToWin">Proovi võita (või vähemalt viigistada) iga mäng mida mängid.</string>
   <string name="resignLostGames">Alistu kaotatud mängud (ära lase kellal joosta lõpuni).</string>
   <string name="temporaryInconvenience">Me vabandame ajutise ebamugavuse pärast,</string>
-  <string name="wishYouGreatGames">ja soovime häid mänge leheküljel lichess.org.</string>
+  <string name="wishYouGreatGames">ja soovime häid mänge lichess.org-is.</string>
   <string name="thankYouForReading">Aitäh lugemast!</string>
   <string name="lifetimeScore">Kõikide mängude skoor</string>
   <string name="currentMatchScore">Praeguste mängude skoor</string>
@@ -924,7 +928,7 @@ Jäta tühjaks, et alustada mänge tavalisest algpositsioonist.</string>
   <string name="reopenYourAccount">Ava oma konto uuesti</string>
   <string name="closedAccountChangedMind">Kui sulgesid oma konto, kuid oled vahepeal ümber mõelnud, on sul üks võimalus oma konto tagasi saada.</string>
   <string name="onlyWorksOnce">See töötab ainult ühe korra.</string>
-  <string name="cantDoThisTwice">Kui te sulged oma konto teist korda, ei ole seda võimalik taastada.</string>
+  <string name="cantDoThisTwice">Kui sa sulged oma konto teist korda, ei ole seda võimalik taastada.</string>
   <string name="emailAssociatedToaccount">Kontoga seotud e-posti aadress</string>
   <string name="sentEmailWithLink">Saatsime teile lingiga e-kirja.</string>
   <string name="tournamentEntryCode">Turniiri osavõtukood</string>
