--- a/translation/dest/site/he-IL.xml
+++ b/translation/dest/site/he-IL.xml
@@ -231,6 +231,8 @@
   <string name="forgotPassword">שכחת סיסמה?</string>
   <string name="error.weakPassword">הסיסמה הזו נפוצה ביותר וקלה מדי לניחוש.</string>
   <string name="error.namePassword">נא לא להשתמש בשם המשתמש בתור הסיסמה.</string>
+  <string name="youAreLeavingLichess">את/ה עוזב/ת את Lichess</string>
+  <string name="neverTypeYourPassword">לעולם אל תקלידו את סיסמתכם בליצ׳ס באף אתר אחר!</string>
   <string name="emailConfirmHelp">עזרה עם אימייל האישור</string>
   <string name="emailConfirmNotReceived">לא קיבלת מייל אישור לאחר שנרשמת?</string>
   <string name="whatSignupUsername">עם איזה שם משתמש נרשמת?</string>
