--- a/translation/dest/site/hy-AM.xml
+++ b/translation/dest/site/hy-AM.xml
@@ -206,6 +206,8 @@
   <string name="email">Էլ. փոստ</string>
   <string name="passwordReset">Վերականգնել գաղտնաբառը</string>
   <string name="forgotPassword">Մոռացել ե՞ք գաղտնաբառը</string>
+  <string name="youAreLeavingLichess">Դուք լքում եք Lichess-ը</string>
+  <string name="neverTypeYourPassword">Երբեք մի՛ մուտքագրեք Lichess-ի գաղտնաբառը այլ կայքերում։</string>
   <string name="emailConfirmHelp">Օգնություն էլեկտրոնային փոստի հաստատման հարցում</string>
   <string name="emailConfirmNotReceived">Գրանցվելուց հետո էլփոստին չե՞ք ստացել հաստատման նամակը:</string>
   <string name="whatSignupUsername">Ի՞նչ օգտանուն եք ընտրել գրանցվելու համար:</string>
