--- a/translation/dest/site/nl-NL.xml
+++ b/translation/dest/site/nl-NL.xml
@@ -209,6 +209,10 @@
   <string name="forgotPassword">Wachtwoord vergeten?</string>
   <string name="error.weakPassword">Dit wachtwoord komt heel vaak voor en is te gemakkelijk te raden.</string>
   <string name="error.namePassword">Gebruik uw gebruikersnaam niet als wachtwoord.</string>
+  <string name="youAreLeavingLichess">Je verlaat Lichess</string>
+  <string name="neverTypeYourPassword">Voer uw Lichess wachtwoord nooit in op een andere website!</string>
+  <string name="passwordSuggestion">Stel geen wachtwoord in dat iemand anders voorstelt. Ze kunnen het gebruiken om je account te stelen.</string>
+  <string name="emailSuggestion">Stel geen e-mailadres in dat iemand anders voorstelt. Ze kunnen het gebruiken om je account te stelen.</string>
   <string name="emailConfirmHelp">Hulp met e-mailbevestiging</string>
   <string name="emailConfirmNotReceived">Geen bevestigingsmail ontvangen na aanmelden?</string>
   <string name="whatSignupUsername">Welke gebruikersnaam heb je gebruikt om je aan te melden?</string>
