--- a/translation/dest/site/sl-SI.xml
+++ b/translation/dest/site/sl-SI.xml
@@ -229,6 +229,12 @@
   <string name="email">E-poštni naslov</string>
   <string name="passwordReset">Ponovna nastavitev gesla</string>
   <string name="forgotPassword">Ste pozabili geslo?</string>
+  <string name="error.weakPassword">To geslo je zelo pogosto in ga je prelahko uganiti.</string>
+  <string name="error.namePassword">Prosimo, ne uporabljajte svojega uporabniškega imena kot gesla.</string>
+  <string name="youAreLeavingLichess">Zapuščate Lichess</string>
+  <string name="neverTypeYourPassword">Nikoli ne vnesite svojega gesla za Lichess na drugem mestu!</string>
+  <string name="passwordSuggestion">Ne nastavite gesla, ki ga predlaga nekdo drug. Uporabili ga bodo za krajo vašega računa.</string>
+  <string name="emailSuggestion">Ne nastavite e-poštnega naslova, ki ga predlaga nekdo drug. Uporabili ga bodo za krajo vašega računa.</string>
   <string name="rank">Uvrstitev</string>
   <string name="rankX">Uvrstitev: %s</string>
   <plurals name="rankIsUpdatedEveryNbMinutes">
