--- a/translation/dest/site/sv-SE.xml
+++ b/translation/dest/site/sv-SE.xml
@@ -207,6 +207,12 @@
   <string name="email">E-post</string>
   <string name="passwordReset">Återställ lösenord</string>
   <string name="forgotPassword">Glömt lösenordet?</string>
+  <string name="error.weakPassword">Detta lösenord är extremt vanligt, och alltför lätt att gissa.</string>
+  <string name="error.namePassword">Använd inte ditt användarnamn som lösenord.</string>
+  <string name="youAreLeavingLichess">Du lämnar Lichess</string>
+  <string name="neverTypeYourPassword">Skriv aldrig ditt Lichess-lösenord på en annan webbplats!</string>
+  <string name="passwordSuggestion">Ange inte ett lösenord som föreslagits av någon annan. De kommer att använda det för att stjäla ditt konto.</string>
+  <string name="emailSuggestion">Ange inte en e-postadress som föreslagits av någon annan. De kommer att använda den för att stjäla ditt konto.</string>
   <string name="emailConfirmHelp">Hjälp med e-postbekräftelse</string>
   <string name="emailConfirmNotReceived">Har du inte fått din e-postbekräftelse efter att du registrerade dig?</string>
   <string name="whatSignupUsername">Vilket användarnamn använde du för att registrera dig?</string>
