--- a/translation/source/site.xml
+++ b/translation/source/site.xml
@@ -810,7 +810,7 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="evaluatingYourMove">Evaluating your move ...</string>
 	<string name="whiteWinsGame">Gote wins</string>
 	<string name="blackWinsGame">Sente wins</string>
-	<string name="%sWinsGame">%s wins</string>
+	<string name="xWinsGame">%s wins</string>
 	<string name="learnFromYourMistakes">Learn from your mistakes</string>
 	<string name="learnFromThisMistake">Learn from this mistake</string>
 	<string name="skipThisMove">Skip this move</string>
