--- a/translation/dest/oauthScope/sk-SK.xml
+++ b/translation/dest/oauthScope/sk-SK.xml
@@ -1,2 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+  <string name="newAccessToken" comment="newAccessToken&#10;&#10;API stands for application programming interface. In this context, it is an API that enables third-party software to work with Lichess. The API has an access token (sort of like a 'login') for security, which is for your account only.">Nový osobný API prístupový token</string>
+  <string name="tokenGrantsPermission">Token umožňuje prístup na váš účet.</string>
+  <string name="carefullySelect">Dôkladne vyberte čo povolíte lebo to bude vo vašom mene.</string>
+  <string name="tokenDescription">Popis tokenu</string>
+  <string name="rememberTokenUse">Takže si pamätajte, na čo slúži tento token</string>
+  <string name="whatTheTokenCanDo">Čo token môže urobiť v tvojom mene:</string>
+  <string name="doNotShareIt">Token umožňuje prístup k vášmu účtu. NEZDIEĽAJTE ho z nikým!</string>
+  <string name="copyTokenNow">Teraz si okopírujte alebo zapíšte token! Nebude možné aby ste ho videli znovu!</string>
+  <string name="preferenceRead" comment="preferenceRead&#10;&#10;In the context of an authentication token, a setting that enables permission to view preferences.">Preferencie čítania</string>
+  <string name="preferenceWrite" comment="preferenceWrite&#10;&#10;In the context of an authentication token, a setting that enables permission to edit preferences.">Napíšte preferencie</string>
+  <string name="emailRead">Emailová adresa</string>
+  <string name="challengeRead">Čítať prichádzajúce výzvy</string>
+  <string name="challengeWrite" comment="challengeWrite&#10;&#10;In the context of an access token, a setting that enables permission to send, accept and reject challenges on behalf of the user">Poslať, prijať alebo odmietnuť výzvy</string>
+  <string name="challengeBulk">Vytvorte veľa hier naraz pre ostatných hráčov</string>
+  <string name="studyRead" comment="studyRead&#10;&#10;Gives access to third-party software to *read* information that already exists. However it won't be able to write (create) private studies or broadcasts.">Prečítať súkromné štúdie a vysielania</string>
+  <string name="studyWrite">Tvoriť, aktualizovať, odstraňovať štúdia a vysielania</string>
+  <string name="tournamentWrite">Vytvárať, upravovať a pripájať sa do turnajov</string>
+  <string name="racerWrite">Vytvárať a pripojiť sa do puzzle pretekov</string>
+  <string name="puzzleRead" comment="puzzleRead&#10;&#10;In the context of an access token, a setting that enables the permission to view the user's puzzle solving history">Čítať aktivitu v puzzle</string>
+  <string name="teamRead">Čítať súkromné tímové informácie</string>
+  <string name="teamWrite">Pripojiť sa k tímom alebo sa odpojiť</string>
+  <string name="teamLead">Spravujte tímy, ktoré vediete: posielajte PM, vyhadzovať členov</string>
+  <string name="followRead">Čítať sledovaných hráčov</string>
+  <string name="followWrite">Sledovať a predsledovať ostatných hráčov</string>
+  <string name="msgWrite">Posielať súkromné správy ostatným hráčom</string>
+  <string name="boardPlay">Hrať hry s šachovnicou Api</string>
+  <string name="botPlay">Hrať hry s botom Api</string>
+  <string name="engineRead">Zobrazte a používajte svoje externé motory</string>
+  <string name="engineWrite">Vytvárajte a aktualizujte externé motory</string>
+  <string name="webLogin">Vytvorte overené relácie webových stránok (udeľuje úplný prístup!)</string>
+  <string name="webMod">Používanie nástrojov moderátora (v rámci vášho povolenia)</string>
+</resources>
