--- a/translation/dest/site/sk-SK.xml
+++ b/translation/dest/site/sk-SK.xml
@@ -98,6 +98,7 @@
   <string name="dtzWithRounding">DTZ50\" so zaokrúhlením, vychádzajúci s počtu polťahov až do najbližšieho brania alebo ťahu pešiakom</string>
   <string name="noGameFound">Nenašla sa žiadna partia</string>
   <string name="maybeIncludeMoreGamesFromThePreferencesMenu">Možno vyberte viac partií z menu preferencií?</string>
+  <string name="openings">Otváranie</string>
   <string name="openingExplorer">Prieskumník otvorení</string>
   <string name="openingEndgameExplorer">Prieskumník otvorení/koncoviek</string>
   <string name="xOpeningExplorer">%s prieskumník otvorení</string>
@@ -228,10 +229,27 @@
   <string name="email">Email</string>
   <string name="passwordReset">Obnova hesla</string>
   <string name="forgotPassword">Zabudli ste heslo?</string>
+  <string name="error.weakPassword">Toto heslo je veľmi bežné, a ľahké na uhádnutie.</string>
+  <string name="error.namePassword">Zadajte prihlasovacie meno a heslo.</string>
+  <string name="youAreLeavingLichess">Odchádzate z Lichessu</string>
+  <string name="neverTypeYourPassword">Nikdy nepoužívajte vaše Lichess heslo na inom webe!</string>
+  <string name="passwordSuggestion">Nepoužívajte heslo ktoré, vám dal niekto iný. Mohol by vám ukradnúť účet.</string>
+  <string name="emailSuggestion">Nepoužívajte e-mail, ktorý, vám dal niekto iný. Mohol by vám ukradnúť účet.</string>
+  <string name="emailConfirmHelp">Pomoc s overením e-mailu</string>
+  <string name="emailConfirmNotReceived">Nedostali ste váš konfirmačný email po registrácii?</string>
   <string name="whatSignupUsername">Aké používateľske meno ste použili pri registrácii?</string>
   <string name="usernameNotFound">Nepodarilo sa nám nájsť používateľa s týmto menom: %s.</string>
+  <string name="usernameCanBeUsedForNewAccount">Môžte použiť toto meno pre registráciu</string>
+  <string name="emailSent">Poslali sme vám e-mail na adresu %s.</string>
+  <string name="emailCanTakeSomeTime">Bude to trvať nejaký čas kým to príde.</string>
   <string name="refreshInboxAfterFiveMinutes">Vyčkajte 5 minút a obnovte vašu mailovú schránku.</string>
+  <string name="checkSpamFolder">Prosím skontrolujte tiež priečinok so spamom či tam nieje. Ak je označte ho, že nieje spam.</string>
   <string name="emailForSignupHelp">Ak zlyhá všetko ostatné, zašlite nám tento email:</string>
+  <string name="copyTextToEmail">Skopírujte a prilepte vyššie uvedený text a pošlite ho na %s</string>
+  <string name="waitForSignupHelp">Čoskoro sa vám ozveme, aby sme vám pomohli dokončiť registráciu.</string>
+  <string name="accountConfirmed">Používateľ %s je úspešne potvrdený.</string>
+  <string name="accountCanLogin">Teraz sa môžete prihlásiť ako %s.</string>
+  <string name="accountConfirmationEmailNotNeeded">Nové heslo vám bolo odoslané.</string>
   <string name="accountClosed">Účet %s je zrušený.</string>
   <string name="accountRegisteredWithoutEmail">Účet %s bol zaregistrovaný bez mailovej adresy.</string>
   <string name="rank">Poradie</string>
@@ -403,6 +421,7 @@
   <string name="siteDescription">Šach online zadarmo. Hrajte šach teraz v novom rozhraní. Bez registrácie, reklám a zásuvných modulov. Hrajte šach s počítačom, priateľmi alebo náhodnými protivníkmi.</string>
   <string name="xJoinedTeamY">%1$s sa pripojil/a k tímu %2$s</string>
   <string name="xCreatedTeamY">%1$s vytvoril/a tím %2$s</string>
+  <string name="startedStreaming">začal vysielať</string>
   <string name="xStartedStreaming">%s začal vysielať</string>
   <string name="averageElo">Priemerný rating</string>
   <string name="location">Poloha</string>
@@ -590,6 +609,8 @@
   <string name="blog">Blog</string>
   <string name="notes">Poznámky</string>
   <string name="typePrivateNotesHere">Sem píšte súkromné správy</string>
+  <string name="writeAPrivateNoteAboutThisUser">Napíšte súkromnú poznámku o tomto používateľovi</string>
+  <string name="noNoteYet">Zatiaľ žiadne</string>
   <string name="invalidUsernameOrPassword">Nesprávne meno alebo heslo</string>
   <string name="incorrectPassword">Nesprávne heslo</string>
   <string name="invalidAuthenticationCode">Neplatný overovací kód</string>
@@ -763,6 +784,7 @@
   <string name="kidMode">Detský režim</string>
   <string name="kidModeExplanation">V detskom režime je pre ochranu detí a mládeže pred ostatnými užívateľmi akákoľvek komunikácia zablokovaná.</string>
   <string name="inKidModeTheLichessLogoGetsIconX">Keď je zapnutý detský režim, tak sa pri logu Lichess objaví ikona %s. Podľa toho viete, že je Vaše dieťa v bezpečí.</string>
+  <string name="askYourChessTeacherAboutLiftingKidMode">Váš účet je pod kotrolou. Opýtajte sa učiteľa okolo odstránenia detského módu.</string>
   <string name="enableKidMode">Povoliť detský režim</string>
   <string name="disableKidMode">Vypnúť detský režim</string>
   <string name="security">Zabezpečenie</string>
