--- a/translation/source/arena.xml
+++ b/translation/source/arena.xml
@@ -56,4 +56,8 @@ Play fast and return to the lobby to play more games and win more points.</strin
   <string name="allowChatHelp">Let players discuss in a chat room</string>
   <string name="arenaStreaks">Arena streaks</string>
   <string name="arenaStreaksHelp">After 2 wins, consecutive wins grant 4 points instead of 2.</string>
+  <string name="noBerserkAllowed">No Berserk allowed</string>
+  <string name="noArenaStreaks">No Arena streaks</string>
+  <string name="averagePerformance">Average performance</string>
+  <string name="averageScore">Average score</string>
 </resources>
