New Crowdin updates (#12344)
* New translations: preferences.xml (Albanian)

* New translations: team.xml (Albanian)

* New translations: arena.xml (Albanian)

* New translations: site.xml (Croatian)

* New translations: tfa.xml (Croatian)

* New translations: preferences.xml (Croatian)

* New translations: arena.xml (Croatian)

* New translations: team.xml (Croatian)

* New translations: preferences.xml (Turkish)

* New translations: arena.xml (Turkish)

* New translations: team.xml (Turkish)

* New translations: arena.xml (Vietnamese)

* New translations: team.xml (Vietnamese)

* New translations: site.xml (Karakalpak)

* New translations: learn.xml (Karakalpak)

* New translations: learn.xml (Karakalpak)

* New translations: learn.xml (Karakalpak)

* New translations: learn.xml (Karakalpak)

* New translations: puzzle.xml (Karakalpak)

* New translations: arena.xml (French)

* New translations: learn.xml (Karakalpak)

* New translations: site.xml (Breton)

* New translations: site.xml (Hungarian)

* New translations: site.xml (English, United States)

* New translations: site.xml (Estonian)

* New translations: site.xml (Croatian)

* New translations: site.xml (Romanian)

* New translations: site.xml (Finnish)

* New translations: site.xml (Hebrew)

* New translations: site.xml (Lithuanian)

* New translations: site.xml (Albanian)

* New translations: site.xml (Kazakh)

* New translations: site.xml (Sorani (Kurdish))

* New translations: site.xml (German)

* New translations: site.xml (English, United States)

* New translations: site.xml (Catalan)

* New translations: site.xml (Dutch)

* New translations: site.xml (Spanish)

* New translations: site.xml (Danish)

* New translations: site.xml (Hebrew)

* New translations: site.xml (Italian)

* New translations: site.xml (Lithuanian)

* New translations: site.xml (Polish)

* New translations: site.xml (Portuguese)

* New transl

--- a/translation/dest/site/en-US.xml
+++ b/translation/dest/site/en-US.xml
@@ -207,7 +207,8 @@
   <string name="email">Email</string>
   <string name="passwordReset">Password reset</string>
   <string name="forgotPassword">Forgot password?</string>
-  <string name="youAreLeavingLichess" comment="youAreLeavingLichess&#10;Appears when opening a different website through Lichess.">You are leaving Lichess</string>
+  <string name="blankedPassword">You have used the same password on another site, and that site has been compromised. To ensure the safety of your Lichess account, we need you to set a new password. Thank you for your understanding.</string>
+  <string name="youAreLeavingLichess">You are leaving Lichess</string>
   <string name="emailConfirmHelp">Help with email confirmation</string>
   <string name="emailConfirmNotReceived">Didn\'t receive your confirmation email after signing up?</string>
   <string name="whatSignupUsername">What username did you use to sign up?</string>
