--- a/translation/dest/site/he-IL.xml
+++ b/translation/dest/site/he-IL.xml
@@ -231,7 +231,8 @@
   <string name="forgotPassword">שכחת סיסמה?</string>
   <string name="error.weakPassword">הסיסמה הזו נפוצה ביותר וקלה מדי לניחוש.</string>
   <string name="error.namePassword">נא לא להשתמש בשם המשתמש בתור הסיסמה.</string>
-  <string name="youAreLeavingLichess" comment="youAreLeavingLichess&#10;Appears when opening a different website through Lichess.">את/ה עוזב/ת את Lichess</string>
+  <string name="blankedPassword">השתמשת בסיסמה שלך באתר אחר, ויתכן שהיא מועדת לפריצה. כדי להגן על חשבונך בליצ׳ס, עליך להגדיר סיסמה חדשה. תודה על ההבנה.</string>
+  <string name="youAreLeavingLichess">את/ה עוזב/ת את Lichess</string>
   <string name="neverTypeYourPassword">לעולם אל תקלידו את סיסמתכם בליצ׳ס באף אתר אחר!</string>
   <string name="passwordSuggestion">אל תשתמשו בסיסמה שהציע לכם אדם אחר. הוא ישתמש בה כדי לגנוב את חשבונכם!</string>
   <string name="emailSuggestion">אל תשמשו בכתובת מייל שהציע אדם אחר. הוא ישתמש בה כדי לגנוב את חשבונכם.</string>
