New Crowdin updates (#12364)
* New translations: site.xml (Latvian)

* New translations: tfa.xml (Latvian)

* New translations: site.xml (Latvian)

* New translations: preferences.xml (Latvian)

* New translations: arena.xml (Latvian)

* New translations: team.xml (Latvian)

* New translations: study.xml (Latvian)

* New translations: ublog.xml (Spanish)

* New translations: site.xml (Romanian)

* New translations: site.xml (Belarusian)

* New translations: preferences.xml (Belarusian)

* New translations: oauthScope.xml (Belarusian)

* New translations: puzzle.xml (German)

* New translations: site.xml (German)

* New translations: site.xml (Catalan)

* New translations: site.xml (French)

* New translations: site.xml (Bulgarian)

* New translations: site.xml (Danish)

* New translations: site.xml (Finnish)

* New translations: site.xml (Hebrew)

* New translations: site.xml (Italian)

* New translations: site.xml (Lithuanian)

* New translations: site.xml (Portuguese)

* New translations: site.xml (Russian)

* New translations: site.xml (Ukrainian)

* New translations: site.xml (Vietnamese)

* New translations: site.xml (Latvian)

* New translations: puzzle.xml (German)

* New translations: broadcast.xml (Finnish)

* New translations: site.xml (Bosnian)

* New translations: site.xml (Romanian)

* New translations: site.xml (Spanish)

* New translations: site.xml (Afrikaans)

* New translations: site.xml (Persian)

* New translations: site.xml (Kazakh)

* New translations: site.xml (Dutch)

* New translations: site.xml (Portuguese, Brazilian)

* New translations: site.xml (Kazakh)

* New translations: site.xml (Luxembourgish)

* New translations: site.xml (Dutch)

* New translations: site.xml (Italian)

* New translations: site.xml (Polish)

* New translations: site.xml (Galician)

* New translations: preferences.xml (Galician)

* New translations: arena.xml (Dutch)

* New tra

--- a/translation/dest/site/it-IT.xml
+++ b/translation/dest/site/it-IT.xml
@@ -209,9 +209,10 @@
   <string name="forgotPassword">Password dimenticata?</string>
   <string name="error.weakPassword">Questa password è estremamente comune e troppo facile da indovinare.</string>
   <string name="error.namePassword">Sei pregato di non utilizzare il tuo nome utente come password.</string>
-  <string name="blankedPassword">Hai usato la stessa password su un altro sito e quel sito è stato violato. Per garantire la sicurezza del tuo account Lichess, abbiamo bisogno che imposti una nuova password. Grazie per la tua comprensione.</string>
+  <string name="blankedPassword" comment="blankedPassword&#10;&#10;Shown on login when the user is blocked from logging in due to having a known compromised password.">Hai usato la stessa password su un altro sito e quel sito è stato violato. Per garantire la sicurezza del tuo account Lichess, abbiamo bisogno che imposti una nuova password. Grazie per la tua comprensione.</string>
   <string name="youAreLeavingLichess">Stai uscendo da Lichess</string>
   <string name="neverTypeYourPassword">Non digitare mai la tua password di Lichess su un altro sito!</string>
+  <string name="proceedToX" comment="proceedToX&#10;&#10;When a user clicks a link to an external page, a warning will show up to notify the user that they are leaving Lichess. This is the text on the button to confirm you want to go to the external site. The %s placeholder will be replaced with the domain of the site e.g. &quot;Proceed to google.com&quot;.">Procedi su %s</string>
   <string name="passwordSuggestion">Non impostare una password suggerita da qualcun altro. La utilizzeranno per rubare il tuo profilo.</string>
   <string name="emailSuggestion">Non impostare un indirizzo email suggerito da qualcun altro. Lo utilizzeranno per rubare il tuo profilo.</string>
   <string name="emailConfirmHelp">Aiuto per la conferma dell\'email</string>
