New Crowdin updates (#12457)
* New translations: team.xml (Karakalpak)

* New translations: perfStat.xml (Karakalpak)

* New translations: search.xml (Karakalpak)

* New translations: tourname.xml (Karakalpak)

* New translations: faq.xml (Karakalpak)

* New translations: puzzle.xml (French)

* New translations: puzzle.xml (Catalan)

* New translations: puzzle.xml (Danish)

* New translations: puzzle.xml (German)

* New translations: puzzle.xml (Finnish)

* New translations: puzzle.xml (Hebrew)

* New translations: puzzle.xml (Italian)

* New translations: puzzle.xml (Portuguese)

* New translations: puzzle.xml (Russian)

* New translations: puzzle.xml (Bosnian)

* New translations: puzzle.xml (Spanish)

* New translations: arena.xml (Arabic)

* New translations: puzzle.xml (Arabic)

* New translations: puzzle.xml (Lithuanian)

* New translations: puzzle.xml (Slovak)

* New translations: puzzle.xml (Turkish)

* New translations: study.xml (Arabic)

* New translations: tfa.xml (Arabic)

* New translations: settings.xml (Arabic)

* New translations: preferences.xml (Arabic)

* New translations: faq.xml (Arabic)

* New translations: faq.xml (Lithuanian)

* New translations: puzzle.xml (Dutch)

* New translations: puzzle.xml (Ukrainian)

* New translations: puzzle.xml (Norwegian Nynorsk)

* New translations: puzzle.xml (Latvian)

* New translations: puzzle.xml (Portuguese, Brazilian)

* New translations: puzzle.xml (Persian)

* New translations: puzzle.xml (Hungarian)

* New translations: site.xml (Slovenian)

* New translations: coordinates.xml (Slovenian)

* New translations: study.xml (Slovenian)

* New translations: class.xml (Slovenian)

* New translations: patron.xml (Slovenian)

* New translations: swiss.xml (Hungarian)

* New translations: streamer.xml (Slovenian)

* New translations: preferences.xml (Slovenian)

* New translations: swiss.xml (Slovenian)

* New translations: pu

--- a/translation/dest/puzzle/de-DE.xml
+++ b/translation/dest/puzzle/de-DE.xml
@@ -21,6 +21,7 @@
   <string name="toGetPersonalizedPuzzles">Um personalisierte Aufgaben zu erhalten:</string>
   <string name="puzzleId">Aufgabe %s</string>
   <string name="puzzleOfTheDay">Aufgabe des Tages</string>
+  <string name="dailyPuzzle">Tägliche Aufgabe</string>
   <string name="clickToSolve">Zum Lösen klicken</string>
   <string name="goodMove">Guter Zug</string>
   <string name="bestMove">Bester Zug!</string>
